--- a/client/src/pages/landing/Landing.module.css
+++ b/client/src/pages/landing/Landing.module.css
@@ -40,6 +40,12 @@
   color: #fff;
   padding: 10px 20px;
   border-radius: 5px;
+  transition: 200ms ease-in-out;
+}
+
+.btn:hover {
+  background-color: var(--button-hover);
+  transition: 200ms ease-in-out;
 }
 
 .main_img {
