--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,7 @@
   --declined-red: #fe6969;
   --button-bg: #ee6c4d;
   --button-hover: #e25430;
+  --dark-bg: #19223b;
 
   /* fonts */
   --heading-font: 'Varela Round', Sans-Serif;
