--- a/client/src/components/statsContainer/StatsContainer.module.css
+++ b/client/src/components/statsContainer/StatsContainer.module.css
@@ -1,4 +1,13 @@
 .stats_container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 2rem;
+  width: 100%;
+}
+
+@media screen and (max-width: 820px) {
+  .stats_container {
+    grid-template-columns: 1fr;
+    row-gap: 2rem;
+  }
 }
