--- a/client/src/components/navbar/Navbar.module.css
+++ b/client/src/components/navbar/Navbar.module.css
@@ -6,18 +6,35 @@
   position: sticky;
   top: 0;
   transition: 0.2s ease;
+  z-index: 1;
+  width: 100%;
 }
 
 .btn_toggle {
   color: white;
   font-size: 2rem;
-  display: flex;
-  align-items: center;
   padding-left: 10px;
 }
 
+.nav_left {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  margin-left: 0.5rem;
+  font-size: 3em;
+  font-weight: bold;
+  display: flex;
+  color: white;
+  height: 5rem;
+}
+
+.logo span {
+  color: #9c7cf6;
+}
+
 .active_sidebar {
-  margin-left: 14em;
   transition: 0.2s ease;
 }
 
