--- a/client/src/components/alert/Alert.module.css
+++ b/client/src/components/alert/Alert.module.css
@@ -6,14 +6,13 @@
   letter-spacing: 2px;
   margin-bottom: 8px;
   border-radius: 5px;
-  color: rgb(252, 248, 248);
+  color: var(--color-font-primary);
 }
 
 .alert_danger {
-  background: rgb(209, 39, 39);
+  background: var(--color-alert-danger);
 }
 
 .alert_confirm {
-  background: rgb(151, 211, 151);
-  color: rgb(255, 251, 251);
+  background: var(--color-alert-confirm);
 }
