--- a/client/src/components/chartsContainer/ChartsContainer.module.css
+++ b/client/src/components/chartsContainer/ChartsContainer.module.css
@@ -1,9 +1,9 @@
 .chart_container {
   margin-top: 2rem;
-  background: var(--dark-bg);
+  background: var(--color-bg-secondary);
   border-radius: 5px;
   padding: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  box-shadow: var(--box-shadow);
 }
 
 .title {
