--- a/client/src/components/job/Job.module.css
+++ b/client/src/components/job/Job.module.css
@@ -3,7 +3,7 @@
   border-radius: 5px;
   margin: 1rem;
   position: relative;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  box-shadow: var(--box-shadow);
 }
 
 /* .banner {
@@ -35,23 +35,23 @@
 }
 
 .banner_interview {
-  background: rgb(125, 213, 240);
-  color: rgb(18, 18, 54);
+  background: var(--color-interview-primary);
+  color: var(--color-interview-secondary);
 }
 .banner_pending {
-  background: rgb(240, 203, 104);
-  color: rgb(90, 68, 6);
+  background: var(--color-pending-primary);
+  color: var(--color-pending-secondary);
 }
 .banner_rejected {
-  background: rgb(230, 66, 66);
-  color: rgb(100, 10, 10);
+  background: var(--color-declined-primary);
+  color: var(--color-declined-secondary);
 }
 
 .title {
   margin: 0.8rem;
 }
 
-.favorite {
+/* .favorite {
   position: absolute;
   right: 1rem;
   top: 2rem;
@@ -60,10 +60,10 @@
 }
 .favorite:hover {
   color: pink;
-}
+} */
 
 .logo {
-  background: #9c7cf6;
+  background: var(--color-brand-primary);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -73,12 +73,12 @@
   font-size: 28px;
 }
 .company {
-  color: #9c7cf6;
+  color: var(--color-brand-primary);
   letter-spacing: 1px;
 }
 
 .position {
-  color: rgb(214, 214, 214);
+  color: var(--color-font-primary);
 }
 
 hr {
@@ -96,7 +96,7 @@ hr {
   margin: 0.8rem;
   display: flex;
   align-items: center;
-  color: rgb(214, 214, 214);
+  color: var(--color-font-primary);
   text-transform: capitalize;
 }
 
@@ -123,38 +123,35 @@ hr {
   border-radius: 5px;
 }
 .btn_edit {
-  background: rgb(177, 212, 137);
-  color: rgb(19, 66, 10);
+  background: #4d5f8b;
+  color: #131422;
   margin-right: 0.5rem;
   padding: 0.42rem 0.7rem;
 }
 
 .btn_edit:hover {
-  background: rgb(208, 235, 178);
-  color: rgb(19, 66, 10);
+  background: #394e7c;
 }
 
-.btn_delete {
-  border: 2px solid rgba(223, 107, 107, 0.89);
-  color: rgba(223, 107, 107, 0.89);
+.btn_delete,
+.btn_confirm {
+  color: #3b0808e3;
+  background: #c94545e3;
   padding: 0.3rem 0.6rem;
 }
 
 .btn_delete:hover {
-  background: rgba(223, 107, 107, 0.89);
-  color: white;
+  background: #a83030e3;
   transition: 0.2s ease;
 }
 
 .btn_confirm {
-  background: rgba(223, 107, 107, 0.89);
-  color: white;
   padding: 0.42rem 0.7rem;
 }
 
 .btn_cancel {
-  border: 2px solid rgba(223, 107, 107, 0.89);
-  color: rgba(223, 107, 107, 0.89);
+  border: 2px solid #993333e3;
+  color: #b65353e3;
   padding: 0.3rem 0.6rem;
   margin-left: 0.5rem;
 }
@@ -164,10 +161,32 @@ hr {
     display: grid;
     grid-template-columns: 1fr;
   }
+  .banner {
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 24px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    text-align: center;
+  }
 }
 @media screen and (min-width: 1020px) and (max-width: 1060px) {
   .description_container {
     display: grid;
     grid-template-columns: 1fr;
+  }
+  .banner {
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 24px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    text-align: center;
   }
 }
