--- a/client/src/components/searchContainer/SearchContainer.module.css
+++ b/client/src/components/searchContainer/SearchContainer.module.css
@@ -1,9 +1,9 @@
 .search_container {
-  background: var(--dark-bg);
+  background: var(--color-bg-secondary);
   border-radius: 5px;
   padding: 1rem;
   margin-bottom: 3rem;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  box-shadow: var(--box-shadow);
 }
 
 .search_form {
