--- a/client/src/pages/dashboard/addJob/AddJob.module.css
+++ b/client/src/pages/dashboard/addJob/AddJob.module.css
@@ -1,12 +1,17 @@
 .form {
-  background: var(--dark-bg);
+  background: var(--color-bg-secondary);
   border-radius: 5px;
-  padding: 1.5rem 2rem;
+  padding: 1rem 2rem;
   margin-top: 1rem;
+  box-shadow: var(--box-shadow);
+}
+
+.title {
+  margin-bottom: 1rem;
 }
 
 .form_center {
-  column-gap: 4rem;
+  column-gap: 3rem;
 }
 
 .btn {
@@ -17,16 +22,20 @@
 }
 .btn_submit {
   padding: 0.4em;
-  background: #9c7cf6;
+  background: var(--color-brand-primary);
   border-radius: 5px;
-  color: white;
+  color: var(--color-font-primary);
+}
+
+.btn_submit:hover {
+  background: var(--color-brand-secondary);
 }
 
 .link {
   margin-left: 1rem;
   text-decoration: none;
-  color: #9c7cf6;
-  border: 2px solid #9c7cf6;
+  color: var(--color-brand-primary);
+  border: 2px solid var(--color-brand-primary);
 }
 
 @media screen and (min-width: 760px) {
