--- a/client/src/pages/landing/Landing.module.css
+++ b/client/src/pages/landing/Landing.module.css
@@ -1,13 +1,6 @@
-.nav {
-  background-color: var(--nav-blue);
-  width: 1400px;
-  height: var(--nav-height);
-  margin: auto;
-}
-
 .container {
   height: 100vh;
-  width: 1400px;
+  width: 80%;
   margin: auto;
   display: flex;
   justify-content: center;
@@ -21,7 +14,7 @@
 .title {
   font-size: 8em;
   font-family: var(--heading-font);
-  color: var(--button-bg);
+  color: var(--color-brand-primary);
 }
 
 .subtitle {
@@ -36,7 +29,7 @@
 
 .btn {
   text-decoration: none;
-  background-color: var(--button-bg);
+  background-color: var(--color-brand-primary);
   color: #fff;
   padding: 10px 20px;
   border-radius: 5px;
@@ -44,10 +37,16 @@
 }
 
 .btn:hover {
-  background-color: var(--button-hover);
+  background-color: var(--color-brand-secondary);
   transition: 200ms ease-in-out;
 }
 
 .main_img {
   flex-basis: 50%;
+}
+
+@media screen and (max-width: 1400px) {
+  .main_img {
+    display: none;
+  }
 }
