Fix logo sizing and margins

--- a/client/src/components/navLinks/NavLinks.module.css
+++ b/client/src/components/navLinks/NavLinks.module.css
@@ -17,6 +17,10 @@
   border-radius: 5px;
 }
 
+.icon {
+  font-size: 1.5rem;
+}
+
 .navlink:hover,
 .navlink.active:hover {
   background: var(--color-brand-primary);
