--- a/client/src/components/navbar/Navbar.module.css
+++ b/client/src/components/navbar/Navbar.module.css
@@ -12,22 +12,24 @@
 
 .btn_toggle {
   color: var(--color-font-primary);
-  font-size: 2rem;
+  font-size: 1.5rem;
   padding-left: 10px;
+  margin-top: 0.4rem;
 }
 
 .nav_left {
   display: flex;
   align-items: center;
+  margin-left: 1.3rem;
 }
 
 .logo {
   margin-left: 0.5rem;
-  font-size: 3em;
+  font-size: 2em;
   font-weight: bold;
   display: flex;
   color: var(--color-font-primary);
-  height: 5rem;
+  align-items: center;
 }
 
 .logo span {
